hphp/hack/test/typecheck/tconst/cannot_use_class_tparams.php
<?hh

class A<T> {
  const type Foo = Container<T>;
}
